src/widgets/styles/NestedDetailBlock.css
.nestedDetailBlock {
    padding-bottom: 0.52083vw;
    margin-bottom: 2.08333vw;
    border-style: solid;
    border-width: 0 0 0.10417vw 0;
    border-color: var(--text-headers-blue);

    display: flex;
    flex-direction: column;
    align-items: stretch;
}

.dropDownButtonArea {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-family: RobotoBold;
    font-size: 1.7vw;
    line-height: 2.4vw;
    color: var(--text-headers-blue);
}

.nestedDetailContent {
    padding: 1.04167vw 0.00000vw;
}

.nestedDetailContent > * {
    margin-bottom: 0.98958vw;
}

.nestedDetailBlock > * {
    margin-top: 0.52083vw;
}

.dropDownArrow {
    width: 1.56250vw;
    margin-left: 1.56250vw;
}

